fix: #793 overflow in the collection card (#891)

--- a/mw-webapp/src/component/wayCollectionCard/WayCollectionCard.module.scss
+++ b/mw-webapp/src/component/wayCollectionCard/WayCollectionCard.module.scss
@@ -30,7 +30,6 @@ $wayCollectionCardAdditionalHeight: 47px;
 
 .title {
   display: -webkit-box;
-  overflow: hidden;
   -webkit-box-orient: vertical;
   color: var(--secondaryTextColor);
   -webkit-line-clamp: 2;
